--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -2,10 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Activity2">
 
     <EditText
         android:id="@+id/editTextName"
@@ -13,18 +12,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="156dp"
         android:layout_marginTop="16dp"
-        android:clickable="false"
-        android:contentDescription="nombre"
-        android:cursorVisible="false"
         android:ems="10"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text=""
+        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="EditableContentDescCheck" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView13"
@@ -43,17 +36,12 @@
         android:layout_marginStart="156dp"
         android:layout_marginTop="388dp"
         android:autofillHints=""
-        android:clickable="false"
-        android:cursorVisible="false"
         android:ems="10"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text=""
+        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextResiduo"
@@ -61,17 +49,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="156dp"
         android:layout_marginTop="316dp"
-        android:clickable="false"
-        android:cursorVisible="false"
         android:ems="10"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text=""
+        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView11"
@@ -99,17 +82,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="156dp"
         android:layout_marginTop="256dp"
-        android:clickable="false"
-        android:cursorVisible="false"
         android:ems="10"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text=""
+        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextDivisor"
@@ -117,17 +95,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="156dp"
         android:layout_marginTop="192dp"
-        android:clickable="false"
-        android:cursorVisible="false"
         android:ems="10"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text=""
+        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView9"
@@ -155,17 +128,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="156dp"
         android:layout_marginTop="140dp"
-        android:clickable="false"
-        android:cursorVisible="false"
         android:ems="10"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text=""
+        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
@@ -193,17 +161,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="156dp"
         android:layout_marginTop="68dp"
-        android:clickable="false"
-        android:cursorVisible="false"
         android:ems="10"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text=""
+        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonSiguiente"
@@ -225,7 +188,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
